--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<!--
-Created using JS Bin
-http://jsbin.com
-
-Copyright (c) 2020 by anonymous (http://jsbin.com/mirowiyudu/1/edit)
-
-Released under the MIT license: http://jsbin.mit-license.org
--->
-<meta name="robots" content="noindex">
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
-</head>
-<body>
-<p>first test</p>
-</body>
+<html lang="zh-CN">
+  <head>
+    <meta charset="utf-8">
+    <title>代码操场</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="scripts/codedb.js" defer></script>
+    <script src="scripts/main.js" defer></script>
+  </head>
+  <body>
+    <h2>实时输出</h2>
+    <div class="output"></div>
+    
+    <h2>可编辑代码</h2>
+    <p class="a11y-label">按 ESC 退出编辑区域，按 Tab 可插入制表符 <code>'\t'</code> </p>
+    <textarea id="code" class="input"></textarea>
+    
+    <div class="controls">
+      <button id="btn-reset">重置</button>
+      <button id="btn-solution">显示答案</button>
+      <select id="select-items"></select>
+    </div>
+  </body>
 </html>
